--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.activities.headliner.TimeLineActivity" />
+        <activity
+        	android:name=".TimeLineActivity" >
+        	<meta-data
+            	android:name="android.support.PARENT_ACTIVITY"
+            	android:value="com.example.myfirstapp.MainActivity" />
+    	</activity>
     </application>
 
 </manifest>
